--- a/palacio.html
+++ b/palacio.html
@@ -24,12 +24,18 @@
 #comedor{
 width:93%;padding-left:10px;
 }
+
+.ventana{
+position:relative;top:5px;left:0;margin-bottom:20px;max-height:900;min-height:300px;height:auto;background-color:#ffffff;border:1px solid #999;border:1px solid rgba(0, 0, 0, 0.3);*border:1px solid #999;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:0 3px 7px rgba(0, 0, 0, 0.3);-moz-box-shadow:0 3px 7px rgba(0, 0, 0, 0.3);box-shadow:0 3px 7px rgba(0, 0, 0, 0.3);-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;
+}
+
 </style>
 <title>Palacio de Gobierno con historia</title>
 </head>
 <body>
-<div class="row">
-	<div class="modal span6">
+<div class="row" >
+	<div class="ventana span6">
+                <div class="modal-body">
 		<div class="row-fluid">
                         <div class="titulo">El Gran Comedor</div>
 			<div class="span3">
@@ -44,7 +50,7 @@ En este imponente salón se firmó en 1980 el Tratado de Paz entre Honduras y El
 			</div>
 		</div>
 	</div>
-
+	</div>
 </div>
 </body>
 </html>
