--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
 <td>Gran Teatro Nacional</td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td>Palacio de Gobierno</td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a></td>
+<td><a href="palacio.html">Palacio de Gobierno</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
 <td><a href="http://www.swissotel.com/hotels/lima/" target="_blank">Swissotel</a></td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws" target="_blank"><i class="icon-map-marker icon-white"></i></a></td>
