--- a/palacio.html
+++ b/palacio.html
@@ -49,8 +49,36 @@ Aquí, lo que más impresiona a los visitantes es una hermosa araña de cristal,
 En este imponente salón se firmó en 1980 el Tratado de Paz entre Honduras y El Salvador, y el Papa Juan Pablo II impartió la paz al Perú en 1985. Por este motivo también se le llama el Salón de La Paz. Las placas que conmemoran ambos acontecimientos se encuentran en el vestíbulo que antecede al Gran Comedor. </div></p>
 			</div>
 		</div>
+		<div class="row-fluid">
+                        <div class="titulo">El Salón Dorado</div>
+			<div class="span3">
+			<img src="static/img/salondorado.jpg" id="comedor" />
+			</div>
+			<div class="span3">
+			<p><div class="detallearticulo">
+			<br /> 
+Es el salón más importante y hermoso de Palacio de Gobierno, creación de Jean Claude Sahut, inspirado en la decoración del Palacio de Versalles. 
+Lo más notable se encuentra en el trabajo de relieve de la bóveda cuya altura alcanza 10.5 metros, con elegantes medallones, personajes mitológicos y un follaje cubierto con pan de oro. Las paredes ostentan relieves en pan de oro. En algunos tramos, flanqueados por altas pillastras, se encuentran espejos franceses de 5 metros de altura que producen una ilusión óptica de gran amplitud. 
+En el centro del Salón sobresale una hermosa tribuna labrada en mármol con columnas de mármol rosa, trabajados en una sola pieza, de 5 metros de altura, que rematan en capitales de bronce dorado. 
+Aquí los Presidentes de la República participan en las más importantes ceremonias que tiene lugar en Palacio, como son la juramentación de los ministros y la presentación de cartas credenciales de los embajadores acreditados ante nuestro país. 
+Los muebles del Salón Dorado, de estilo Luis XVI y las arañas de cristal fueron importados de Francia al igual que la mayor cantidad del material utilizado para la decoración.  </div></p>
+			</div>
+
+<div class="row-fluid">
+                        <div class="titulo">El Salón Túpac Amaru</div>
+			<div class="span3">
+			<img src="static/img/tupacamaru.jpg" id="comedor" />
+			</div>
+			<div class="span3">
+			<p><div class="detallearticulo">
+			<br /> 
+Conocido anteriormente como Salón Francisco Pizarro hasta julio de 1972, es un salón en el que predomina el estilo neocolonial. Colinda con el salón Dorado y mide 35 metros de largo. Está dividido en tres cuerpos: una rotonda central de 11 metros de diámetro y dos alas laterales de 12 metros de largo por  8 metros de ancho.  </div></p>
+			</div>
+		</div>
 	</div>
-	</div>
+
+</div>
+</div>
 </div>
 </body>
 </html>
