--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@ $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?
 table tr td {
 text-align: justify;
 }
+.texto{
+	float: none;
+	color: #676767;	
+	font-size: 11px;
+	line-height:1.3;text-align:justify;
+}
+.titular{
+	color: #676767;	
+	font-size: 12px;
+}
 </style>
 <title>III Cumbre ASPA</title>
 </head>
@@ -109,39 +119,133 @@ text-align: justify;
   <div style="height: 0px;" id="collapseTwo" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
 <table class="table table-hover table-bordered table-striped">
-<caption><h3>Martes 02 de Octubre, 2012</h3></caption>
-<tbody> 
+<caption><h3>Lunes 01 de Octubre, 2012 (Foro Empresarial)</h3></caption>
+<tbody class="texto"> 
 <tr> 
-	<th style="background-color:#ffffff;">Horario</th><th style="background-color:#ffffff;">Actividad</th>
-</tr>
-</tbody>
-<tr>
-<td>8:30 – 8:45 a.m.</td><td>Palabras de Bienvenida  <br />Sr.  Juan Jiménez, Presidente del Consejo de Ministros</td>
+	<th style="background-color:#ffffff;font-size:12px;">Horario</th><th style="background-color:#ffffff;font-size:12px;">Actividad</th>
 </tr>
 <tr>
-<td>8:45 – 9:15 a.m.</td><td style="text-align: justify;">CLIMA DE INVERSIÓN: ¿En qué se sustenta el crecimiento   económico del Perú?, ¿Cuáles son las perspectivas?, ¿Mediante qué mecanismos incentiva el Estado peruano la inversión? 
- <br />Sr.  Luis Miguel Castilla, Ministro de Economía y Finanzas del Perú</td>
+<td>9:00 – 9:45 a.m.</td><td><strong class="titular">Apertura del Evento</strong><br /><br />Su Excelencia, Ollanta Humala Tasso, Presidente de la República del Perú (7 a 10 minutos)
+<br />Dr. Mohamed At-Twaijri, Secretario General Asistente para Asuntos Económicos de la Liga de Estados Árabes </td>
 </tr>
 <tr>
-<td>9:15 – 9:45 a.m.</td><td style="text-align: justify;">SOSTENIBLIDAD ENERGÉTICA: ¿De qué fuentes energéticas dispone el Perú?,  ¿Cómo se vienen desarrollando?, ¿Puede el Perú convertirse en un exportador neto de energía? <br />Sr.  Jorge Merino, Ministro de Energía y Minas del Perú</td>
+<td>9:45 – 11:00 a.m.</td><td style="text-align: justify;"><strong class="titular">TENDIENDO PUENTES: ¿Cómo la infraestructura puede impulsar el crecimiento económico y la competitividad? ¿Mejorar la conectividad es la mejor manera de acortar las brechas?</strong><br />
+Orador principal: General Michel Sleiman, Presidente de la República de Líbano<br /> 
+<strong>Moderador: </strong><br />
+<strong>Panel: </strong>
+<ul>
+<li>Sr. Abdelkader Amara, Ministro de Industria, Comercio y Nuevas Tecnologías (Marruecos)</li>
+<li>H.E. Sultan Ahmed Bin Sulayem, Presidente de DP World (EAU)</li>
+<li>Sr. Sergio Cavagnaro Santa María, Gerente General de la Cámara Chilena de la Construcción (Chile) *</li></ul>
+</ul>
+</td>
 </tr>
 <tr>
-<td>9:45 – 10:15 a.m.</td><td style="text-align: justify;">INFRAESTRUCTURA PARA LA INTEGRACIÓN: ¿Cómo se viene articulando  la integración física del territorio peruano?, ¿Cómo participa la inversión privada  en el desarrollo de infraestructura?, ¿Cuál es la estrategia a seguir  para afianzar al Perú como hub del Pacífico Sudamericano? 
- <br />Sr.  Carlos Paredes, Ministro de Transportes y Comunicaciones del Perú</td>
+<td>11:00 – 11:30 a.m.</td><td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
 </tr>
 <tr>
-<td>10:15 – 10:45 a.m.</td><td style="text-align: justify;">DESARROLLO URBANO: ¿Cuál es el déficit de infraestructura urbana?,  ¿Cuál es la perspectiva de crecimiento urbano para los siguientes años?,   ¿Qué Programas impulsa  el Estado y cuál es la participación del sector privado?   
- <br />Sr.  René Cornejo, Ministro de vivienda, Construcción y Saneamiento del Perú</td>
+<td>11:30 – 12:45 p.m.</td><td style="text-align: justify;"><strong class="titular">SEGURIDAD ALIMENTARIA: ¿Cuales son los riesgos actuales para ambas regiones? ¿Puede Sudamérica convertirse en un abastecedor clave de alimentos? ¿Cuáles son las oportunidades de inversión? ¿Cuáles son los principales problemas en el comercio de alimentos entre Medio Oriente y  América Latina? ¿Cuál es el rol de la tecnología? ¿Qué efecto tiene la crisis financiera en la seguridad alimentaria?</strong><br />
+<strong>Oradora principal:</strong>Sra. Dilma Rousseff, Presidenta de la República Federativa del Brasil *<br />
+<strong>Moderador:</strong><br />
+<strong>Panel: </strong><br />
+<ul>
+<li>Nasser Mohamed Al-Hajri, Presidente de Hassad Food Company (Qatar)</li>
+<li>Rafael Mejía López, Presidente de la Sociedad de Agricultores de Colombia (Colombia) </li>
+<li>José Luis Silva Martinot, Ministro de Comercio Exterior y Turismo (Perú) *</li>
+</ul>
+</td>
 </tr>
 <tr>
-<td>10:45 – 11:15 a.m.</td><td style="text-align: justify;">AGRICULTURA DE ALTO VALOR: ¿En qué aspectos se basa la competitividad  del Perú como productor de alimentos?, ¿Qué proyectos refuerzan la competitividad  del país en la actividad agrícola?, ¿Cuáles son las oportunidades de inversión? 
- <br />Sr.  Milton von Hesse, Ministro de Agricultura del Perú</td>
+<td>12:45 – 2:30 p.m.</td><td style="text-align: justify;"><strong class="titular">Almuerzo en el Swissôtel</strong></td>
 </tr>
 <tr>
-<td>11:15 a.m. – 11:30 a.m.</td><td style="text-align: justify;">Palabras de clausura  
- <br />Sr.  Javier Illescas, Director Ejecutivo de la Agencia de Promoción de Inversiones del Perú - PROINVERSION</td>
+<td>2:30 – 3:45 p.m.</td><td style="text-align: justify;"><strong class="titular">EL FUTURO DE LA ENERGÍA: ¿Será el acceso a la energía una traba para el crecimiento económico global? ¿Cómo se puede maximizar el uso de fuentes energéticas no renovables, protegiendo el ambiente y desarrollando nuevas tecnologías? </strong><br />
+<strong>Orador principal:</strong> Sr. Juan Manuel Santos, Presidente de Colombia *<br /> 
+<strong>Moderador:</strong><br />
+<strong>Panel: </strong><br />
+<ul>
+<li>Sr. Enrique M. Pescarmona, Presidente y CEO de IMPSA (Argentina)</li>
+<li>Sra. Maria das Graças Silva Foster,Presidenta de Petrobras (Brasil) *</li>
+<li>Mauro R. Hoyer, Director del Departamento de Información del Fondo de la OPEP para el Desarrollo Internacional (Arabia Saudita)</li>
+</ul> </td>
 </tr>
-</table>
+<tr>
+<td>3:45 – 4:15 p.m.</td><td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
+</tr>
+<tr>
+<td>4:15 – 5:30 p.m.</td><td style="text-align: justify;"><strong class="titular">MÁS ALLÁ DE LOS RECURSOS NATURALES: ¿Es la disponibilidad de recursos naturales una limitación en el desarrollo de la innovación? ¿Cómo se pueden usar los recursos naturales para crear valor agregado? ¿Cómo cuidar el escaso recurso del agua? ¿Cómo afrontar el problema del cambio climático? </strong><br />
+<strong>Orador principal:</strong> Sheikh Hamad Bin Khalifa Al-Thani, Emir del Estado de Qatar <br />
+<strong>Moderador:</strong><br />
+<strong>Panel: </strong><br />
+<ul>
+<li>Issad Rebrab, CEO, CEVITAL (Argelia)</li>
+<li>Carlos Bulgheroni, Presidente de Bridas Argentina (Argentina)</li>
+</ul></td>
+</tr>
+<tr>
+<td>5:30 – 5:45 p.m.</td><td style="text-align: justify;"><strong class="titular">Sumario: ¿Qué oportunidades se encuentran en ambas regiones?
+</strong><br />
+Carlos Chiappori Samengo, Presidente de COMEXPERU</td>
+</tr>
+<tr>
+<td>5:45 – 6:00 p.m.</td><td style="text-align: justify;"><strong class="titular">Clausura del evento:</strong><br />
+Luis Miguel Castilla Rubio, Ministro de Economía y Finanzas del Perú</td>
+</tr>
+<tr>
+<td>7:00 p.m.</td><td style="text-align: justify;"><strong class="titular">Eventos sociales y culturales:</strong><br />
+Espectáculo en el Gran Teatro Nacional<br />				
+Pisco de Honor en el Gran Teatro Nacional</td>
+</tr>
+</tbody></table>
+
+<table class="table table-hover table-bordered table-striped">
+    <caption><h3>Martes 02 de Octubre, 2012 (Desayuno de Negocios - Proinversión)</h3></caption>
+    <tbody class="texto"> 
+        <tr> 
+	    <th style="background-color:#ffffff;font-size:12px;">Horario</th><th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+        </tr>
+        <tr>
+            <td>9:00 – 9:45 a.m.</td>
+            <td><strong class="titular">Palabras de bienvenida</strong><br />
+		Juan Jiménez Mayor, Presidente del Consejo de Ministros del Perú *
+            </td>
+        </tr>
+	<tr>
+	    <td>8:45 – 9:15 a.m.</td>
+	    <td style="text-align: justify;"><strong class="titular">CLIMA DE INVERSIÓN: ¿En qué se sustenta el crecimiento económico del Perú?, ¿Cuáles son las perspectivas?, ¿Mediante qué mecanismos incentiva el Estado peruano la inversión?</strong><br />
+Luis Miguel Castilla Rubio, Ministro de Economía y Finanzas del Perú 
+            </td>
+	</tr>
+	<tr>
+	    <td>9:15 – 9:45 a.m.</td>
+	    <td style="text-align: justify;"><strong class="titular">SOSTENIBILIDAD ENERGÉTICA: ¿De qué fuentes energéticas dispone el Perú?, ¿Cómo se vienen desarrollando?, ¿Puede el Perú convertirse en un exportador neto de energía?</strong><br />
+Jorge Merino Tafur, Ministro de Energía y Minas del Perú
+</td>
+</tr>
+<tr>
+<td>9:45 – 10:15 a.m.</td><td style="text-align: justify;"><strong class="titular">INFRAESTRUCTURA PARA LA INTEGRACIÓN: ¿Cómo se viene articulando la integración física del territorio peruano?, ¿Cómo participa la inversión privada en el desarrollo de infraestructura?, ¿Cuál es la estrategia a seguir para afianzar al Perú como hub del Pacífico Sudamericano?</strong><br />
+Carlos Paredes Rodríguez, Ministro de Transportes y Comunicaciones del Perú *</td>
+</tr>
+<tr>
+<td>10:15 – 10:45 a.m.</td><td style="text-align: justify;"><strong class="titular">DESARROLLO URBANO: ¿Cuál es el déficit de infraestructura urbana?, ¿Cuál es la perspectiva de crecimiento urbano para los siguientes años?, ¿Qué programas impulsa el Estado y cuál es la participación del sector privado?</strong><br />
+René Cornejo Díaz, Ministro de Vivienda, Construcción y Saneamiento 
+</td>
+</tr>
+<tr>
+<td>10:45 – 11:15 a.m.</td><td style="text-align: justify;"><strong class="titular">AGRICULTURA DE ALTO VALOR: ¿En qué aspectos se basa la competitividad del Perú como productor de alimentos?, ¿Qué proyectos refuerzan la competitividad del país en la actividad agrícola?, ¿Cuáles son las oportunidades de inversión?</strong><br />
+Milton Von Hesse La Serna, Ministro de Agricultura del Perú</td>
+</tr>
+<tr>
+<td>11:15 – 11:30 a.m.</td><td style="text-align: justify;"><strong class="titular">Palabras de clausura </strong><br />
+Javier Illescas, Director Ejecutivo de la Agencia de Promoción de la Inversión Privada - Proinversión</td>
+</tr>
+<tr>
+<td>11:30 – 1:00 p.m.</td><td style="text-align: justify;"><strong class="titular">Networking</strong></td>
+</tr>
+<tr>
+<td>3:30 – 6:00 p.m.</td><td style="text-align: justify;"><strong class="titular">City tour</strong></td>
+</tr>
+</tbody></table>
 <!-- CONTENIDO -->
     </div>
   </div>
@@ -166,7 +270,7 @@ text-align: justify;
   </div>
   <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-     <p style="text-align:justify">
+     <p class="texto">
 El Perú es una República democrática, social, independiente y soberana. Su ordenamiento jurídico se rige actualmente por la Constitución Política promulgada el 29 de diciembre de 1993.
 El estado peruano tiene en su estructura tres poderes independientes: Poder Ejecutivo, Poder Legislativo (con un Parlamento Unicameral de 130 miembros) y Poder Judicial. Las autoridades del Poder Ejecutivo y Legislativo son elegidas por sufragio popular. 
 El actual Presidente Constitucional de la República, Ollanta Humala Tasso, asumió el cargo el 28 de julio del 2011 y dirigirá el país hasta el 28 de Julio del 2016. <br /> 
@@ -238,7 +342,7 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
   </div>
 </div>
 <!-- FIN  Información Perú -->
-<!-- INICIO UBICACION -->
+<!-- INICIO SEDES -->
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
@@ -257,7 +361,7 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
 <td><a href="http://www.mcultura.gob.pe/" target="_blank">Ministerio de Cultura</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/Apq8a"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td>Gran Teatro Nacional</td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a></td>
+<td><a href="http://www.mcultura.gob.pe/gran-teatro-nacional-informacion-general" target="_blank">Gran Teatro Nacional</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
 <td><a href="palacio.html">Palacio de Gobierno</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a></td>
