--- a/palacio.html
+++ b/palacio.html
@@ -26,7 +26,7 @@ width:93%;padding-left:10px;
 }
 
 .ventana{
-position:relative;top:5px;left:0;margin-bottom:20px;max-height:900;min-height:300px;height:auto;background-color:#ffffff;border:1px solid #999;border:1px solid rgba(0, 0, 0, 0.3);*border:1px solid #999;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:0 3px 7px rgba(0, 0, 0, 0.3);-moz-box-shadow:0 3px 7px rgba(0, 0, 0, 0.3);box-shadow:0 3px 7px rgba(0, 0, 0, 0.3);-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;
+position:relative;top:5px;left:0;margin-bottom:20px;max-height:900;min-height:300px;height:auto;background-color:#ffffff;border:1px solid #999;border:1px solid rgba(245, 55, 55, 0.3);*border:1px solid #999;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:0 3px 7px rgba(245, 55, 55, 0.3);-moz-box-shadow:0 3px 7px rgba(245, 55, 55, 0.3);box-shadow:0 3px 7px rgba(245, 55, 55, 0.3);-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;
 }
 
 </style>
@@ -35,7 +35,17 @@ position:relative;top:5px;left:0;margin-bottom:20px;max-height:900;min-height:30
 <body>
 <div class="row" >
 	<div class="ventana span6">
+                <div class="modal-header"><h4>Palacio de Gobierno con historia</h4></div>
                 <div class="modal-body">
+                <div class="row-fluid">
+		<div class="span3">
+		<p><div class="detallearticulo">
+La Casa de Gobierno del Perú convive con una historia que se remonta a la fundación de Lima, registrada el 18 de enero de 1535. Frente a lo que es hoy la Plaza Mayor la casa del gobernador Francisco Pizarro fue construida de un modo sencillo con un patio central y un jardín en el que se sembró una higuera que se mantiene viva.
+Al iniciarse la vida republicana, en la segunda década del siglo XIX; la antigua casa de Pizarro se convirtió en la Casa de Gobierno del Perú, en cuyas instalaciones funcionaron las dependencias de varios ministerios. 
+En diciembre de 1938 el Presidente Óscar R. Benavides inauguró la actual construcción de Palacio de Gobierno.
+		</div></p>
+		</div>
+ 		</div>
 		<div class="row-fluid">
                         <div class="titulo">El Gran Comedor</div>
 			<div class="span3">
@@ -47,6 +57,15 @@ position:relative;top:5px;left:0;margin-bottom:20px;max-height:900;min-height:30
 Diseñado por el arquitecto Ricardo de Jaxa Malachowski es uno de los espacios más atractivos de Palacio. Su estilo recuerda a los elegantes salones coloniales de la época del barroco. Puede albergar  a 250 comensales. 
 Aquí, lo que más impresiona a los visitantes es una hermosa araña de cristal, ubicada en el centro del salón. Esta gran lámpara pesa aproximadamente una tonelada y media, y se ilumina con 175 bombillas de luz. 
 En este imponente salón se firmó en 1980 el Tratado de Paz entre Honduras y El Salvador, y el Papa Juan Pablo II impartió la paz al Perú en 1985. Por este motivo también se le llama el Salón de La Paz. Las placas que conmemoran ambos acontecimientos se encuentran en el vestíbulo que antecede al Gran Comedor. </div></p>
+			</div>
+		</div>
+		<div class="row-fluid">
+                        <div class="titulo">El Gran Hall </div>	<br />	<br />	
+			<div class="span3">
+			<p><div class="detallearticulo">
+Las más importantes personalidades que visitan la sede del Ejecutivo ingresan por la Puerta de Honor, la cual conduce al Gran Hall o Hall del Acuerdo Nacional, el primer espacio de Palacio al que acceden, en cuyos flancos se lucen hermosas columnas y relieves trabajados en yeso y estuco decorados con pinturas y pan de bronce. 
+También se aprecian magníficos vitrales que integran el techo. En el segundo piso existe una galería decorada en estucado y yeso blanco. Aquí se encuentra el salón de sesiones del Consejo de Ministros. 
+En el Gran Hall se exhibe una galería de bustos esculpidos por Miguel Baca Rossi, que representan a personalidades de la historia de América Latina, así como dos esculturas de los Libertadores Simón Bolívar y José de San Martín, del artista Luis Agurto.  </div></p>
 			</div>
 		</div>
 		<div class="row-fluid">
@@ -75,6 +94,19 @@ Los muebles del Salón Dorado, de estilo Luis XVI y las arañas de cristal fuero
 Conocido anteriormente como Salón Francisco Pizarro hasta julio de 1972, es un salón en el que predomina el estilo neocolonial. Colinda con el salón Dorado y mide 35 metros de largo. Está dividido en tres cuerpos: una rotonda central de 11 metros de diámetro y dos alas laterales de 12 metros de largo por  8 metros de ancho.  </div></p>
 			</div>
 		</div>
+
+<div class="row-fluid">
+	<div class="titulo">El Salón Dorado de la residencia presidencial</div>
+	<br /><br /> 
+	<div class="span3">
+		<p><div class="detallearticulo">
+		<br /> 
+	Es uno de los salones más amplios de la Casa de Gobierno, con vista al jardín interior, donde se mantiene la higuera que sembró Francisco Pizarro. Destaca por sus hermosos estucados en yeso, pintados en colores pastel. El estilo de sus muebles es Luis XVI al igual que sus arañas de cristal.</div></p>
+	</div>
+</div>
+
+
+
 	</div>
 
 </div>
