--- a/index.html
+++ b/index.html
@@ -378,6 +378,21 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
   </div>
 </div>
 <!-- FIN UBICACION -->
+<!-- INICIO NOTICIAS ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" href="http://www.andina.com.pe/espanol/aspa2012/index.aspx" target="_blank">
+      Noticias ASPA
+    </a>
+  </div>
+  <div style="height: 0px;" id="info-peru3" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+     
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN NOTICIAS ASPA -->
 <!-- INICIO CONTACTO -->
 <div class="accordion-group">
   <div class="accordion-heading">
