--- a/index.html
+++ b/index.html
@@ -354,10 +354,11 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
 <table class="table table-hover table-bordered table-striped">
 <tbody> 
 <tr> 
-	<th>Local</th>	<th>Mapa</th>
+	<th style="background-color:#ffffff;font-size:12px;">Local</th>
+	<th style="background-color:#ffffff;font-size:12px;">Mapa</th>
 </tr>
-</tbody>
-<tr>
+
+<tr >
 <td><a href="http://www.mcultura.gob.pe/" target="_blank">Ministerio de Cultura</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/Apq8a"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
@@ -368,11 +369,11 @@ El idioma oficial es el español expresado por el  84% de la población. Sin emb
 </tr>
 <tr>
 <td><a href="http://www.swissotel.com/hotels/lima/" target="_blank">Swissotel</a></td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws" target="_blank"><i class="icon-map-marker icon-white"></i></a></td>
-<tr>
 </tr>
+<tr>
 <td><a href="http://www.bnp.gob.pe/portalbnp/" target="_blank">Biblioteca Nacional</a></td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws" target="_blank"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
-</table>
+</tbody></table>
 <!-- CONTENIDO -->
     </div>
   </div>
